# CPP_

1.Cmake/: readme.txt
1.Cmake/Caculator/: .text.swp  CMakeLists.txt
1.Cmake/Caculator/MathFunctions/: CMakeLists.txt
2.OpenCV/: CMakeLists.txt  main.cpp  readme.txt
2.OpenCV/src/: CMakeLists.txt  app_tools.cpp  app_tools.h  document_scan.cpp  document_scan.h  image_functions.cpp  image_functions.h  interactive_image.cpp  interactive_image.h  interactive_video.cpp  interactive_video.h  video_functions.cpp  video_functions.h
3.OOP/: .gitattributes
3.OOP/BookStore/: Book.h  BookStore.cpp  BookStore.h  Item.cpp  Item.h  main  main.cpp
3.OOP/bookstore/: main.cpp
4.Geo_Stitcher/: CMakeLists.txt  extract_image_gps_to_csv.py  image_gps_output.csv  main.cpp
4.Geo_Stitcher/sources/: CMakeLists.txt  stitching_images.cpp  stitching_images.h  utils.cpp  utils.h
